Fix styling of chip icons and labels.
Ensure icons don't get squished, and labels stil fit in the chip if they
wrap to two lines.

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ button.image-button>img {
 }
 
 .chip-label {
-  margin: 5px;
+  margin: 0 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
